# wispr

./: .gitignore  CLAUDE.md  README.md  build.ps1  config.toml  dictionary.txt  main.py  pyproject.toml
assets/: brands-en.txt
src/wispr_clone/: audio_capture.py  brands.py  config.py  controller.py  dictionary.py  hotkey.py  hotkey_dialog.py  hud.py  lang.py  main.py  paste.py  paths.py  post_process.py  structure.py  transcribe.py  tray.py  usage.py  usage_dialog.py
tests/: test_brands.py  test_config.py  test_dictionary.py  test_hud_smoke.py  test_paths.py  test_post_process.py  test_structure.py  test_usage.py
